# kareki

./: .gitignore  .gitmodules  Cargo.toml  README.md
data/: Cargo.toml
data/generator/: Cargo.toml
data/generator/src/: block.rs  item.rs  main.rs
data/src/: block.rs  item.rs  lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: protocol_read.rs  protocol_write.rs  tests.rs
src/: client.rs  login.rs  main.rs  mcstream.rs  packet.rs  play.rs  protocol.rs  server.rs  slp.rs  state.rs  types.rs  world.rs
src/packet/: client.rs  server.rs
src/types/: arr.rs  block_entity.rs  block_face.rs  bool.rs  chunk.rs  chunk_section.rs  digging_status.rs  heightmap.rs  item_stack_meta.rs  nbt.rs  option.rs  position.rs  slot.rs  string.rs  uuid.rs  var.rs  varint.rs
