[package]
name = "kareki"
version = "0.1.0"
authors = ["naari3 <naari.named@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["v4"] }
openssl-sys = "0.9"
openssl = "0.10"
tokio = { version = "0.2", features = ["full"] }
mojang-api = "0.6"
aes = "0.3"
cfb8 = "0.3"
bufstream = "0.1"
num = "0.2.1"
hematite-nbt = "0.5.2"