[package]
name = "kareki"
version = "0.1.0"
authors = ["naari3 <naari.named@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["v4"] }
openssl-sys = "0.9"
openssl = "0.10"
tokio = { version = "0.2", features = ["full"] }
mojang-api = "0.6"
aes = "0.7"
cfb8 = "0.7"
bufstream = "0.1"
num = "0.2.1"
num-derive = "0.2"
num-traits = "0.2"
hematite-nbt = "0.5.2"
bytes = "1.1.0"
kareki-macros = { path = "macros" }
kareki-data = { path = "data" }
flume = "0.10.9"
futures-lite = "1.12.0"
flate2 = "1.0"
image = { version = "0.23", features = ["png", "gif"]}
base64 = "0.13.0"
once_cell = "1.8.0"