[package]
name = "kareki-macros"
version = "0.1.0"
authors = ["naari3 <naari.named@gmail.com>"]
edition = "2018"
autotests = false
publish = false

[[test]]
name = "tests"
path = "tests/tests.rs"

[lib]
proc-macro = true

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
byteorder = "1"

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
